samples/_failures_safe/1761248648_0888bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f5a44b3.c: In function ‘main’:
./samples/SAFE/__tmp_0f5a44b3.c:127:16: error: missing terminating " character
  127 |         printf("3.
      |                ^~~
./samples/SAFE/__tmp_0f5a44b3.c:127:9: error: expected expression at end of input
  127 |         printf("3.
      |         ^~~~~~
./samples/SAFE/__tmp_0f5a44b3.c:127:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f5a44b3.c:127:9: error: expected declaration or statement at end of input
